Refactor to introduce priority.